--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -25,6 +26,8 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "jest-config": "^20.0.4",
+    "jest-environment-node": "^20.0.3",
     "moment": "^2.21.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -75,7 +78,9 @@
       "web.jsx",
       "jsx",
       "node"
-    ]
+    ],
+    "verbose": true,
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   },
   "babel": {
     "plugins": ["babel-plugin-transform-decorators-legacy"],
@@ -88,8 +93,11 @@
     "babel-jest": "^20.0.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.1",
     "jest": "^20.0.4",
-    "jest-cli": "^22.4.2",
+    "jest-cli": "^20.0.4",
+    "jsdom": "11.6.2",
+    "jsdom-global": "3.0.2",
     "mobx": "^4.0.0",
     "mobx-react": "^5.0.0",
     "node-sass": "^4.8.1",
